Adicionado cores de fundo

--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        table, th, td {
-          border: 1px solid black;
-        }
-        </style>
+    
 </head>
 <header>
     <img src="recife_logo.jpg" alt="Cidade de Recife" width="400">
@@ -19,7 +15,7 @@
 <body>
     <table width = "60%">
         <tr>
-            <td width="60%" colspan="4">
+            <td width="60%" colspan="4" bgcolor="#FFE4E1">
                 <h1>Pontos Turísticos</h1>
                 <h2>Marco Zero</h2>
                 <h3>
@@ -30,7 +26,7 @@
             </td>
         </tr>
     <tr>
-        <td width="70%" colspan="3">
+        <td width="70%" colspan="3" bgcolor="#FFF8DC">
             <h3>Sobre o Marco Zero</h3>
             <p>
                 O Marco Zero é o ponto zero de todas as medidas oficiais das distâncias rodoviárias de Pernambuco, assinalado por uma placa colocada no chão da Praça Barão do Rio Branco, no Bairro do Recife.
@@ -40,15 +36,15 @@
                 Também foi alterada a posição do Marco Zero, o obelisco colocado no centro praça em 1938, pelo Automóvel Clube de Pernambuco, foi deslocado em outro ponto da praça, juntamente como a estátua do Barão do Rio Branco.
             </p>
         </td>
-        <td width = "30%" colspan="1"> 
+        <td width = "30%" colspan="1" bgcolor="#FFF8DC"> 
             <img src="marco-zero.jpg" alt="imagem do marco zero" width = "100%">
         </td>
     </tr>
     <tr>
-        <td width="30%" colspan="1">
+        <td width="30%" colspan="1" bgcolor="#F0FFF0">
             <img src="conj-arquit.jpg" alt="conjunto arquitetonico" width = "100%">
         </td>
-        <td width="70%" colspan="3">
+        <td width="70%" colspan="3" bgcolor="#F0FFF0">
             <h3>Conjunto arquitetônico eclético</h3>
             <p>
                 A praça e o bairro inteiro, já durante o domínio holandês (1630-1654), passaram por aterros e reformas radicais, com altos e baixos. Uma das mais importantes foi a reforma urbana do início de 1900, que deixou como legado um importante acervo arquitetônico eclético, tombado como patrimônio nacional pelo IPHAN em 1998, que assim justifica o reconhecimento:
@@ -62,7 +58,7 @@
         </td>
     </tr>
     <tr>
-        <td width="70%" colspan="3">
+        <td width="70%" colspan="3" bgcolor="#FFF8DC">
             <h3>Parque das Esculturas de Francisco Brennand</h3>
             <p>
                 Exatamente na frente do Marco Zero, do outro lado do estuário, fica o Parque das Esculturas, uma exposição de mais de 90 (?) obras do escultor e artista plástico pernambucano Francisco Brennand, inaugurado em 2000 para comemorar os 500 anos da chegada dos portugueses ao Brasil.
@@ -72,15 +68,15 @@
                 Para chegar lá você pode pegar o barquinho que sai do Marco Zero ou ir de carro, moto ou bicicleta passando pela Avenida Brasília Teimosa, seguindo até o dique. Aconselho a quem vai de carro de verificar as condições do trecho da avenida que fica no dique. No local tem um pequeno estacionamento.
             </p>
         </td>
-        <td width = "30%" colspan="1"> 
+        <td width = "30%" colspan="1" bgcolor="#FFF8DC"> 
             <img src="parque-estadual.jpg" alt="parque das esculturas" width = "100%">
         </td>
     </tr>
     <tr>
-        <td width="30%" colspan="1">
+        <td width="30%" colspan="1" bgcolor="#F0FFF0">
             <img src="armazem-porto.jpg" alt="conjunto arquitetonico" width = "100%">
         </td>
-        <td width="70%" colspan="3">
+        <td width="70%" colspan="3" bgcolor="#F0FFF0">
             <h3>Armazéns do Porto</h3>
             <p>
                 Do lado direito da praça encontra-se Armazéns do Porto, um espaço de entretenimento e gastronomia,
@@ -90,7 +86,7 @@
         </td>
     </tr>
     <tr>
-        <td width="70%" colspan="3">
+        <td width="70%" colspan="3" bgcolor="#FFF8DC">
             <h3>Central de Artesanato</h3>
             <p>
                 Inaugurado em 2012, o Centro de Artesanato de Pernambuco tem como foco a arte popular e o artesanato tradicional.
@@ -99,7 +95,7 @@
                 há galeria para exposição, auditório e espaço gastronômico com uma vista para o rio Capibaribe.
              </p>
         </td>
-        <td width = "30%" colspan="1"> 
+        <td width = "30%" colspan="1" bgcolor="#FFF8DC"> 
             <img src="central-artesanato.jpg" alt="parque das esculturas" width = "100%">
         </td>
     </tr>
@@ -107,6 +103,7 @@
     </table>
 </body>
 <footer>
+    <hr>
     (C) 26/11/2022 - Treinamento HTML - Proz Educação - Codepark sobre Recife - Marco Zero - autor Alexandre Alves Batista
 </footer>
 </html>
