--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <table width = "60%">
         <tr>
             <td width="60%" colspan="4" bgcolor="#FFE4E1">
-                <h1>Pontos Turísticos</h1>
+                <h1>Pontos Turísticos:</h1>
                 <h2>Marco Zero</h2>
                 <h3>
                      A Praça Barão do Rio Branco, mais conhecida como Marco Zero, é um dos lugares mais simbólicos de Recife
